added new text line...

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,6 @@
     Hello, world!
     And Hello, world!
     Trying out on my own!Trying out on my own!
+    Trying out on my own!
   </body>
 </html>
